--- a/DevExMobileApp/DevExMobileApp/DevExMobileApp.csproj
+++ b/DevExMobileApp/DevExMobileApp/DevExMobileApp.csproj
@@ -37,9 +37,12 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="Helpers\Settings.cs" />
+    <Compile Include="Models\Agenda.cs" />
     <Compile Include="Models\BlogPost.cs" />
+    <Compile Include="Models\Enums.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Reward.cs" />
+    <Compile Include="Models\Session.cs" />
     <Compile Include="Models\Topic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\AgendaPage.xaml.cs">
