--- a/DevExMobileApp/DevExMobileApp/DevExMobileApp.csproj
+++ b/DevExMobileApp/DevExMobileApp/DevExMobileApp.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Reward.cs" />
     <Compile Include="Models\Session.cs" />
+    <Compile Include="Models\Shop.cs" />
     <Compile Include="Models\Topic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\AgendaPage.xaml.cs">
@@ -53,6 +54,9 @@
     </Compile>
     <Compile Include="UI\BlogsPage.xaml.cs">
       <DependentUpon>BlogsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\KudosShop.xaml.cs">
+      <DependentUpon>KudosShop.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -177,6 +181,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="UI\RewardsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\KudosShop.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
